Custom--app/main/default/objects/Listing__c/fields/Days_to_Re_Resident__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Re_Resident__c</fullName>
    <formula>Days_from_Move_Out_to_Office_Sign_Off__c + DOM_Rehab_Complete_to_Lease_Start__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Re-Resident</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>