Custom--app/main/default/objects/Listing__c/fields/Days_to_Rent_Ready_Listing_Est__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Rent_Ready_Listing_Est__c</fullName>
    <formula>IF( ISBLANK( Rent_Ready_Date__c )= TRUE , Make_Ready_Date__c - Today(), null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Rent Ready</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>