Custom--app/main/default/objects/Listing__c/fields/Deposit_Recv_d_Date__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Recv_d_Date__c</fullName>
    <formula>Actual_AppTrack__r.Deposit_Recv_d_Date__c</formula>
    <label>Deposit Recv'd Date</label>
    <type>Date</type>
</CustomField>