Custom--app/main/default/objects/Listing__c/fields/Disposition_No__c.field-meta.xml
<CustomField>
    <fullName>Disposition_No__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Disposition No.</label>
    <referenceTo>Disposition__c</referenceTo>
    <relationshipLabel>Listings</relationshipLabel>
    <relationshipName>Listings</relationshipName>
    <type>Lookup</type>
</CustomField>