Custom--app/main/default/objects/Listing__c/fields/Does_Home_Have_a_Sign__c.field-meta.xml
<CustomField>
    <fullName>Does_Home_Have_a_Sign__c</fullName>
    <label>Does Home Have a Sign?</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>