Custom--app/main/default/objects/Listing__c/fields/DOM__c.field-meta.xml
<CustomField>
    <fullName>DOM__c</fullName>
    <formula>IF(
AND(
ISPICKVAL(Status__c , "Leased"),
NOT(ISBLANK( Lease_Executed_Date__c ))
),
 Lease_Executed_Date__c - Rent_Ready_Date__c,
IF(
AND(
ISPICKVAL(Status__c , "Leased"),
ISBLANK( Lease_Executed_Date__c )
),
Date_Leased__c - Rent_Ready_Date__c,
TODAY()-Rent_Ready_Date__c
))</formula>
    <inlineHelpText>Lease Executed Date minus Rent Ready Date.</inlineHelpText>
    <label>DOM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>