Custom--app/main/default/objects/Listing__c/fields/DOM_Rehab_Complete_to_Lease_Start__c.field-meta.xml
<CustomField>
    <fullName>DOM_Rehab_Complete_to_Lease_Start__c</fullName>
    <formula>IF(
AND(
ISPICKVAL(Status__c , "Leased"),
NOT(ISBLANK(  Lease_Start_Date__c ))
),
 Lease_Start_Date__c  - Rehab_Complete_Date__c ,
IF(
AND(
ISPICKVAL(Status__c , "Leased"),
ISBLANK(  Lease_Start_Date__c  )
),
Date_Leased__c - Rehab_Complete_Date__c,
TODAY()-Rehab_Complete_Date__c
))</formula>
    <label>DOM (Rehab Complete to Lease Start)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>