Custom--app/main/default/objects/Listing__c/fields/DOM_RentReady_LeaseStart__c.field-meta.xml
<CustomField>
    <fullName>DOM_RentReady_LeaseStart__c</fullName>
    <description># Days from Rent Ready Date to Lease Start Date</description>
    <formula>IF(NOT(ISBLANK( Actual_AppTrack__c )), Lease_Start_Date__c - Rent_Ready_Date__c, null)</formula>
    <label>DOM (Rent Ready to Lease Start)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>