Custom--app/main/default/objects/Listing__c/fields/Down_Pre_Marketing_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>Down_Pre_Marketing_Status_Date__c</fullName>
    <inlineHelpText>This field is automatically populated with TODAY via workflow when (1) the Listing Status is changed to "Down - Pre-Marketing", and (2) this field does not already have a date.</inlineHelpText>
    <label>Down - Pre-Marketing Status Date</label>
    <type>Date</type>
</CustomField>