Custom--app/main/default/objects/Listing__c/fields/Est_Rehab_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Est_Rehab_Complete_Date__c</fullName>
    <formula>If( NOT( ISBLANK( Rehab_Remediation_Record__c ) ),  Rehab_Remediation_Record__r.GC_Completion_Date_Revised__c , 


Rehab__r.GC_Completion_Date_Revised__c)</formula>
    <inlineHelpText>This field reflects the General Contractor's revised completion date and may be revised throughout the course of the project.</inlineHelpText>
    <label>Est. Rehab Complete Date</label>
    <type>Date</type>
</CustomField>