Custom--app/main/default/objects/Listing__c/fields/Expdited_Request_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Expdited_Request_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>set when user selected " Expedite request" button</description>
    <label>Expedited Request Submitted</label>
    <type>Checkbox</type>
</CustomField>