Custom--app/main/default/objects/Listing__c/fields/Expedite_Status__c.field-meta.xml
<CustomField>
    <fullName>Expedite_Status__c</fullName>
    <formula>Text( Rehab__r.Expedite_Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expedite Status</label>
    <type>Text</type>
</CustomField>