Custom--app/main/default/objects/Listing__c/fields/External_Agent__c.field-meta.xml
<CustomField>
    <fullName>External_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If this listing is being managed by a 3rd party agent (non-user of sf.com), you should link this to their contact record.</inlineHelpText>
    <label>External/3rd Party Agent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Listings (External/3rd Party Agent)</relationshipLabel>
    <relationshipName>Listings1</relationshipName>
    <type>Lookup</type>
</CustomField>