Custom--app/main/default/objects/Listing__c/fields/Features__c.field-meta.xml
<CustomField>
    <fullName>Features__c</fullName>
    <label>Features</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bay Windows</fullName>
            </value>
            <value>
                <fullName>Boat Dock</fullName>
            </value>
            <value>
                <fullName>Built-In Shelves</fullName>
            </value>
            <value>
                <fullName>Clubhouse</fullName>
            </value>
            <value>
                <fullName>Covered Patio</fullName>
            </value>
            <value>
                <fullName>Crown Molding</fullName>
            </value>
            <value>
                <fullName>Fenced Backyard</fullName>
            </value>
            <value>
                <fullName>Finished Basement</fullName>
            </value>
            <value>
                <fullName>Fireplace</fullName>
            </value>
            <value>
                <fullName>Gated Community</fullName>
            </value>
            <value>
                <fullName>Granite Countertops</fullName>
            </value>
            <value>
                <fullName>Hardwood Floors</fullName>
            </value>
            <value>
                <fullName>High Ceilings</fullName>
            </value>
            <value>
                <fullName>Lake</fullName>
            </value>
            <value>
                <fullName>Parks</fullName>
            </value>
            <value>
                <fullName>Playgrounds</fullName>
            </value>
            <value>
                <fullName>Pond</fullName>
            </value>
            <value>
                <fullName>Recessed Lighting</fullName>
            </value>
            <value>
                <fullName>Screened Porch</fullName>
            </value>
            <value>
                <fullName>Stainless Steel Appliances</fullName>
            </value>
            <value>
                <fullName>Tennis Courts</fullName>
            </value>
            <value>
                <fullName>Tile Floors</fullName>
            </value>
            <value>
                <fullName>Walking/Biking Trails</fullName>
            </value>
            <value>
                <fullName>Wall of Windows</fullName>
            </value>
            <value>
                <fullName>Wrap Around Balcony</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>