Custom--app/main/default/objects/Listing__c/fields/Floorplan_Rating__c.field-meta.xml
<CustomField>
    <fullName>Floorplan_Rating__c</fullName>
    <label>Floorplan Rating</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>