Custom--app/main/default/objects/Listing__c/fields/HOA_Application_Fee__c.field-meta.xml
<CustomField>
    <fullName>HOA_Application_Fee__c</fullName>
    <label>HOA Application Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>