Custom--app/main/default/objects/Listing__c/fields/HOA_Primary__c.field-meta.xml
<CustomField>
    <fullName>HOA_Primary__c</fullName>
    <formula>Residence__r.HOA_Primary__r.Name</formula>
    <label>HOA (Primary)</label>
    <type>Text</type>
</CustomField>