Custom--app/main/default/objects/Listing__c/fields/HOA_Secondary__c.field-meta.xml
<CustomField>
    <fullName>HOA_Secondary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HOA (Secondary)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Listings (HOA (Secondary))</relationshipLabel>
    <relationshipName>HOA_Secondary</relationshipName>
    <type>Lookup</type>
</CustomField>