Custom--app/main/default/objects/Listing__c/fields/Home_Not_Priced_Competitively__c.field-meta.xml
<CustomField>
    <fullName>Home_Not_Priced_Competitively__c</fullName>
    <label>Home Not Priced Competitively</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>