Custom--app/main/default/objects/Listing__c/fields/Initial_Smell__c.field-meta.xml
<CustomField>
    <fullName>Initial_Smell__c</fullName>
    <label>Initial Smell</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>