Custom--app/main/default/objects/Listing__c/fields/Internal_or_External_Agent__c.field-meta.xml
<CustomField>
    <fullName>Internal_or_External_Agent__c</fullName>
    <formula>IF (ISBLANK(Listing_Agent__c) = False, "Internal", 
IF (ISBLANK (External_Agent__c) = False, "External", "Unknown"))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Internal or External Agent?</label>
    <type>Text</type>
</CustomField>