Custom--app/main/default/objects/Listing__c/fields/Issue_Details__c.field-meta.xml
<CustomField>
    <fullName>Issue_Details__c</fullName>
    <inlineHelpText>Use this field to describe any outstanding Rehab or Service items that need to be addressed or that are wish list items.  This information will be sent to Portfolio Manager to determine appropriate action items.</inlineHelpText>
    <label>Issue Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>