Custom--app/main/default/objects/Listing__c/fields/LA_Entered_Rent_Ready_Date__c.field-meta.xml
<CustomField>
    <fullName>LA_Entered_Rent_Ready_Date__c</fullName>
    <description>D-00016238:Specifically for Performance Monitoring (fields to be hidden from layout)

Field populates name of Lease Administrator who updated 'Rent Ready Date' most recently</description>
    <label>LA Entered Rent Ready Date</label>
    <length>100</length>
    <type>Text</type>
</CustomField>