Custom--app/main/default/objects/Listing__c/fields/LA_Finalized_Listing_Amenities_Last__c.field-meta.xml
<CustomField>
    <fullName>LA_Finalized_Listing_Amenities_Last__c</fullName>
    <description>D-00016238:Specifically for Performance Monitoring (fields to be hidden from layout)
Field populates name of Lease Administrator who updated 'Listing Amenities Finalized Date' most recently</description>
    <label>LA Finalized Listing Amenities Last</label>
    <length>100</length>
    <type>Text</type>
</CustomField>