Custom--app/main/default/objects/Listing__c/fields/LA_Finalized_Romance_Paragraph_Last__c.field-meta.xml
<CustomField>
    <fullName>LA_Finalized_Romance_Paragraph_Last__c</fullName>
    <description>D-00016238:Specifically for Performance Monitoring (fields to be hidden from layout)
Field populates name of Lease Administrator who updated 'Romance Paragraph Finalized Date' most recently</description>
    <label>LA Finalized Romance Paragraph Last</label>
    <length>100</length>
    <type>Text</type>
</CustomField>