Custom--app/main/default/objects/Listing__c/fields/LA_Prepared_Coming_Soon_Listing_Last__c.field-meta.xml
<CustomField>
    <fullName>LA_Prepared_Coming_Soon_Listing_Last__c</fullName>
    <description>D-00016238:-Specifically for Performance Monitoring (fields to be hidden from layout)
Field populates name of Lease Administrator who updated 'Coming Soon Listing Prepared Date' most recently</description>
    <label>LA Prepared Coming Soon Listing Last</label>
    <length>100</length>
    <type>Text</type>
</CustomField>