Custom--app/main/default/objects/Listing__c/fields/LA_Updated_Rent_Caf_Listing__c.field-meta.xml
<CustomField>
    <fullName>LA_Updated_Rent_Caf_Listing__c</fullName>
    <description>D-00016238 :Specifically for Performance Monitoring (fields to be hidden from layout)
Field populates name of Lease Administrator who updated 'Rent Café Listing' most recently</description>
    <label>LA Updated Rent Café Listing</label>
    <length>100</length>
    <type>Text</type>
</CustomField>