Custom--app/main/default/objects/Listing__c/fields/Landscaping_Backyard__c.field-meta.xml
<CustomField>
    <fullName>Landscaping_Backyard__c</fullName>
    <label>Landscaping (Backyard)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>