Custom--app/main/default/objects/Listing__c/fields/Last_Rent_Adjustment_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Rent_Adjustment_Date__c</fullName>
    <inlineHelpText>This date is automatically populated with the date the Market (Asking) Rent was last changed.</inlineHelpText>
    <label>Last Rent Adjustment Date</label>
    <type>Date</type>
</CustomField>