Custom--app/main/default/objects/Listing__c/fields/Leads_Sent_to_Agent_Last_10_Days__c.field-meta.xml
<CustomField>
    <fullName>Leads_Sent_to_Agent_Last_10_Days__c</fullName>
    <label># Leads Sent to Agent Last 10 Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>