Custom--app/main/default/objects/Listing__c/fields/Lease_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Lease_Start_Date__c</fullName>
    <formula>Actual_AppTrack__r.Lease_Start_Date__c</formula>
    <inlineHelpText>This is a formula field that reflects the Lease Start Date from the Primary Applicant Tracking record associated with this Listing.</inlineHelpText>
    <label>Lease Start Date</label>
    <type>Date</type>
</CustomField>