Custom--app/main/default/objects/Listing__c/fields/LeaseAfterListing__c.field-meta.xml
<CustomField>
    <fullName>LeaseAfterListing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field contains lease created on that listing</description>
    <label>LeaseAfterListing</label>
    <referenceTo>Tenant_Card__c</referenceTo>
    <relationshipLabel>Listings (LeaseAfterListing)</relationshipLabel>
    <relationshipName>LeaseAfterListing</relationshipName>
    <type>Lookup</type>
</CustomField>