Custom--app/main/default/objects/Listing__c/fields/Leasing_Agent__c.field-meta.xml
<CustomField>
    <fullName>Leasing_Agent__c</fullName>
    <label>Leasing Agent - Temporary field for data</label>
    <length>155</length>
    <type>Text</type>
</CustomField>