Custom--app/main/default/objects/Listing__c/fields/Leasing_Mgr_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Leasing_Mgr_Assigned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Leasing Mgr Assigned</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Listings2</relationshipName>
    <type>Lookup</type>
</CustomField>