Custom--app/main/default/objects/Listing__c/fields/Leasing_Mgr_Visit_Comments__c.field-meta.xml
<CustomField>
    <fullName>Leasing_Mgr_Visit_Comments__c</fullName>
    <label>Leasing Manager Review Comments</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>