Custom--app/main/default/objects/Listing__c/fields/Leasing_Mgr_Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>Leasing_Mgr_Visit_Date__c</fullName>
    <label>Leasing Manager Review Date -Most Recent</label>
    <type>Date</type>
</CustomField>