Custom--app/main/default/objects/Listing__c/fields/List_Hub_Post__c.field-meta.xml
<CustomField>
    <fullName>List_Hub_Post__c</fullName>
    <label>List Hub Post</label>
    <type>Date</type>
</CustomField>