Custom--app/main/default/objects/Listing__c/fields/List_Hub_URL__c.field-meta.xml
<CustomField>
    <fullName>List_Hub_URL__c</fullName>
    <label>List Hub Listing</label>
    <type>Url</type>
</CustomField>