Custom--app/main/default/objects/Listing__c/fields/Listing_Agent_Company__c.field-meta.xml
<CustomField>
    <fullName>Listing_Agent_Company__c</fullName>
    <formula>External_Agent__r.Account.Name</formula>
    <label>Listing Agent Company</label>
    <type>Text</type>
</CustomField>