Custom--app/main/default/objects/Listing__c/fields/Listing_Agent_Email__c.field-meta.xml
<CustomField>
    <fullName>Listing_Agent_Email__c</fullName>
    <formula>IF(NOT(ISBLANK(Listing_Agent__c)), Listing_Agent__r.Email , 
IF(NOT(ISBLANK( External_Agent__c )),  External_Agent__r.Email , 
null))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Listing Agent Email</label>
    <type>Text</type>
</CustomField>