Custom--app/main/default/objects/Listing__c/fields/Listing_Agent_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Listing_Agent_Mobile__c</fullName>
    <description>This is the phone number (not mobile) from either the Contact record (for external agents) or the User record (for internal agents).</description>
    <formula>IF(NOT(ISBLANK(Listing_Agent__c)), Listing_Agent__r.Phone, 
IF(NOT(ISBLANK(  External_Agent__c  )), External_Agent__r.Phone , 
null))</formula>
    <label>Listing Agent Phone</label>
    <type>Text</type>
</CustomField>