Custom--app/main/default/objects/Listing__c/fields/Listing_Agent_Temporary_Field__c.field-meta.xml
<CustomField>
    <fullName>Listing_Agent_Temporary_Field__c</fullName>
    <inlineHelpText>This is a temporary text field that we will use to bring in data from the current leasing trackers.  Once we have added all the listing agents as users, this field will go away in favor of the listing agent look-up field below.</inlineHelpText>
    <label>Listing Agent (Temporary Text Field)</label>
    <length>155</length>
    <type>Text</type>
</CustomField>