Custom--app/main/default/objects/Listing__c/fields/Listing_Amenities_Finalized__c.field-meta.xml
<CustomField>
    <fullName>Listing_Amenities_Finalized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Listing Amenities Finalized</label>
    <type>Checkbox</type>
</CustomField>