Custom--app/main/default/objects/Listing__c/fields/Listing_Optimized_Photos_Description__c.field-meta.xml
<CustomField>
    <fullName>Listing_Optimized_Photos_Description__c</fullName>
    <label>Listing Optimized (Photos/Description)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>