Custom--app/main/default/objects/Listing__c/fields/Listing_Status_has_been_Leased__c.field-meta.xml
<CustomField>
    <fullName>Listing_Status_has_been_Leased__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Has the Listing Status ever been "Leased" - if it has - this check box will be set to true</inlineHelpText>
    <label>Listing Status has been "Leased"</label>
    <type>Checkbox</type>
</CustomField>