Custom--app/main/default/objects/Listing__c/fields/Location_Factors__c.field-meta.xml
<CustomField>
    <fullName>Location_Factors__c</fullName>
    <label>Location Factors</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>