Custom--app/main/default/objects/Listing__c/fields/Locks_Re_Key_Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Locks_Re_Key_Order_Date__c</fullName>
    <label>Locks Re-Key Order Date</label>
    <type>Date</type>
</CustomField>