Custom--app/main/default/objects/Listing__c/fields/Locksmith__c.field-meta.xml
<CustomField>
    <fullName>Locksmith__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Locksmith</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Listings (Locksmith)</relationshipLabel>
    <relationshipName>Listings1</relationshipName>
    <type>Lookup</type>
</CustomField>