Custom--app/main/default/objects/Listing__c/fields/Locksmith_Contact__c.field-meta.xml
<CustomField>
    <fullName>Locksmith_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Locksmith Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Listings - Locksmith</relationshipLabel>
    <relationshipName>Listings</relationshipName>
    <type>Lookup</type>
</CustomField>