Custom--app/main/default/objects/Listing__c/fields/Locksmith_Email__c.field-meta.xml
<CustomField>
    <fullName>Locksmith_Email__c</fullName>
    <formula>Locksmith_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Locksmith Email</label>
    <type>Text</type>
</CustomField>