Custom--app/main/default/objects/Listing__c/fields/Make_Ready_Date__c.field-meta.xml
<CustomField>
    <fullName>Make_Ready_Date__c</fullName>
    <label>Yardi Make Ready Date</label>
    <type>Date</type>
</CustomField>