Custom--app/main/default/objects/Listing__c/fields/Market_Rent__c.field-meta.xml
<CustomField>
    <fullName>Market_Rent__c</fullName>
    <inlineHelpText>When this value is changed, the "Last Rent Adjustment Date" will auto-populate with the date it was changed.</inlineHelpText>
    <label>Market (Asking) Rent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>