Custom--app/main/default/objects/Listing__c/fields/Marketing_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marketing Coordinator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Listings3</relationshipName>
    <type>Lookup</type>
</CustomField>