Custom--app/main/default/objects/Listing__c/fields/Marketing_Photos__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Photos__c</fullName>
    <label>Marketing Photos</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>