Custom--app/main/default/objects/Listing__c/fields/MLS_Area__c.field-meta.xml
<CustomField>
    <fullName>MLS_Area__c</fullName>
    <label>MLS Area</label>
    <length>10</length>
    <type>Text</type>
</CustomField>