Custom--app/main/default/objects/Listing__c/fields/MLS_Comments__c.field-meta.xml
<CustomField>
    <fullName>MLS_Comments__c</fullName>
    <label>MLS Comments</label>
    <type>TextArea</type>
</CustomField>