Custom--app/main/default/objects/Listing__c/fields/MLS_Listing__c.field-meta.xml
<CustomField>
    <fullName>MLS_Listing__c</fullName>
    <label>MLS Listing #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>