Custom--app/main/default/objects/Listing__c/fields/MLS_Or_Equivalent__c.field-meta.xml
<CustomField>
    <fullName>MLS_Or_Equivalent__c</fullName>
    <label>MLS Or Equivalent</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>