Custom--app/main/default/objects/Listing__c/fields/MLS_Status_Alert__c.field-meta.xml
<CustomField>
    <fullName>MLS_Status_Alert__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked this will send the Listing Agent an Alert telling them to move the MLS status to Pending</inlineHelpText>
    <label>MLS Status Alert</label>
    <type>Checkbox</type>
</CustomField>