Custom--app/main/default/objects/Listing__c/fields/My_Listing_Listing_Agent__c.field-meta.xml
<CustomField>
    <fullName>My_Listing_Listing_Agent__c</fullName>
    <description>If the user is listed as the "Listing Agent" - then this field will be yes - otherwise it will be "No"</description>
    <formula>IF( Listing_Agent__r.Id = $User.Id , "Yes" , "No")</formula>
    <label>My Listing (Listing Agent)</label>
    <type>Text</type>
</CustomField>