Custom--app/main/default/objects/Listing__c/fields/Notification_Preference__c.field-meta.xml
<CustomField>
    <fullName>Notification_Preference__c</fullName>
    <formula>text(Listing_Agent__r.Notification_Preference__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the preferred method the Listing Agent has requested for receiving Listing Assignments and Leads.</inlineHelpText>
    <label>Notification Preference</label>
    <type>Text</type>
</CustomField>