Custom--app/main/default/objects/Listing__c/fields/Notify_Listing_Agent__c.field-meta.xml
<CustomField>
    <fullName>Notify_Listing_Agent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notify Listing Agent</label>
    <type>Checkbox</type>
</CustomField>