Custom--app/main/default/objects/Listing__c/fields/Other__c.field-meta.xml
<CustomField>
    <fullName>Other__c</fullName>
    <label>Other</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>