Custom--app/main/default/objects/Listing__c/fields/Other_MLS_Listing__c.field-meta.xml
<CustomField>
    <fullName>Other_MLS_Listing__c</fullName>
    <label>Other MLS Listing #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>