Custom--app/main/default/objects/Listing__c/fields/Other_Restrictions__c.field-meta.xml
<CustomField>
    <fullName>Other_Restrictions__c</fullName>
    <label>Other Restrictions</label>
    <type>TextArea</type>
</CustomField>