Custom--app/main/default/objects/Listing__c/fields/Overall_Asset_Score__c.field-meta.xml
<CustomField>
    <fullName>Overall_Asset_Score__c</fullName>
    <formula>Residence__r.Overall_Asset_Score__c</formula>
    <inlineHelpText>Score from 1 to 5 averaging the Property and Location Score</inlineHelpText>
    <label>Overall Asset Score</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>