Custom--app/main/default/objects/Listing__c/fields/Parking__c.field-meta.xml
<CustomField>
    <fullName>Parking__c</fullName>
    <formula>Portfolio__r.Parking__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parking</label>
    <type>Text</type>
</CustomField>