Custom--app/main/default/objects/Listing__c/fields/Personal_Property_Hold__c.field-meta.xml
<CustomField>
    <fullName>Personal_Property_Hold__c</fullName>
    <formula>Rehab__r.Personal_Property_Hold_Expiration_Date__c</formula>
    <label>Personal Property Hold</label>
    <type>Date</type>
</CustomField>