Custom--app/main/default/objects/Listing__c/fields/Pest_Control_Needed__c.field-meta.xml
<CustomField>
    <fullName>Pest_Control_Needed__c</fullName>
    <label>Pest Control Needed?</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>