Custom--app/main/default/objects/Listing__c/fields/Photos_Finalized__c.field-meta.xml
<CustomField>
    <fullName>Photos_Finalized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Photos Finalized</label>
    <type>Checkbox</type>
</CustomField>