Custom--app/main/default/objects/Listing__c/fields/Photos_Formatted_FB__c.field-meta.xml
<CustomField>
    <fullName>Photos_Formatted_FB__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Have the photos been formatted specifically for Facebook?</inlineHelpText>
    <label>Photos Formatted FB</label>
    <type>Checkbox</type>
</CustomField>