Custom--app/main/default/objects/Listing__c/fields/PODId__c.field-meta.xml
<CustomField>
    <fullName>PODId__c</fullName>
    <formula>IF (ISBLANK(Portfolio__r.Owner:Queue.QueueName) = FALSE, Portfolio__r.Owner:Queue.QueueName, Portfolio__r.Owner:User.Id)</formula>
    <label>PODId</label>
    <type>Text</type>
</CustomField>