Custom--app/main/default/objects/Listing__c/fields/PointCentral_Lock_Installed__c.field-meta.xml
<CustomField>
    <fullName>PointCentral_Lock_Installed__c</fullName>
    <formula>true</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PointCentral Lock Installed</label>
    <type>Checkbox</type>
</CustomField>